# fdic-data

./: Main.py  README.md  pyproject.toml
fdic/: fdic.csv  fdic.numbers
