[tool.poetry]
name = "fdic-stats"
version = "0.1.0"
description = ""
authors = ["jidicula <johanan.idicula@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
